--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: D&D Project website #website title
 description: > # this means to ignore newlines until "baseurl:"
   Documentation website of Dungeons & Dragons graduation project by Jan Hopmans
 url: https://elonoir.github.io #https://kuoa.github.io # the base hostname & protocol for your site
-baseurl: DnD  # the sub-path of your site, e.g. /blog/
+baseurl: /DnD/  # the sub-path of your site, e.g. /blog/
 
 disqus_shortname: # leave empty if you don't want comments
 google_analytics: false #if set to "true" modify the google_analytycs.html, set to false otherwise
