--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: D&D Project website #website title
 description: > # this means to ignore newlines until "baseurl:"
   Documentation website of Dungeons & Dragons graduation project by Jan Hopmans
-url: https://elonoir.github.io/DnD/ #https://kuoa.github.io # the base hostname & protocol for your site
+url: https://elonoir.github.io/DnD #https://kuoa.github.io # the base hostname & protocol for your site
 baseurl:  # the sub-path of your site, e.g. /blog/
 
 disqus_shortname: # leave empty if you don't want comments
